--- a/software.html
+++ b/software.html
@@ -40,14 +40,14 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://hire.withgoogle.com/public/jobs/xenditco/view/P_AAAAAAEAAE9JRbnQBFZ3kW'>Senior Software Engineer - Invoice Team job in  Jakarta, Indonesia at Xendit</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Jakarta, Indonesia Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/incontact/job/oLbpbfwg'>NICE inContact Careers - Principal Software Engineer (Omni)</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=owmK8fwu&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nyPZmMwZ'>Gigamon Careers - Senior Staff Software Engineer - User Interface</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=owmK8fwu&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nyPZmMwZ'>Gigamon Careers - Senior Staff Software Engineer - User Interface</a></h5> 
 <p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o6S7afwZ&__jvst=Employee+Referral&__jvsd=sfhI7fw5&__jvsc=Twitter&bid=nVRYmMwn'>Cirrus Logic Careers - Spring Intern - Software Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o6S7afwZ&__jvst=Employee+Referral&__jvsd=sfhI7fw5&__jvsc=Twitter&bid=nVRYmMwn'>Cirrus Logic Careers - Spring Intern - Software Engineering</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698350907-senior-react-native-software-engineer-joining-bonus-'>KMS Technology SENIOR REACT NATIVE SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698350907-senior-react-native-software-engineer-joining-bonus-'>KMS Technology SENIOR REACT NATIVE SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -139,11 +139,11 @@
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/software-engineer-3014'>Software Engineer - Itron Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/software-engineer-3014'>Software Engineer - Itron Careers</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/icertis/31eef823-b754-4902-8deb-18ad301d2d24'>Icertis - Senior Software Engineer - Platform Engineering (Salesforce)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/icertis/31eef823-b754-4902-8deb-18ad301d2d24'>Icertis - Senior Software Engineer - Platform Engineering (Salesforce)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -155,7 +155,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/okIpbfwm'>The Climate Corporation Careers - Intern: Software Engineer in Test (Summer 2020)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/okIpbfwm'>The Climate Corporation Careers - Intern: Software Engineer in Test (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -203,7 +203,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o1K89fwM&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nwZRmMwZ'>Palo Alto Networks Careers - Software Engineer - Malware Signatures</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o1K89fwM&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nwZRmMwZ'>Palo Alto Networks Careers - Software Engineer - Malware Signatures</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -219,7 +219,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4497550002'>Job Application for Junior Software Engineer at KeepTruckin</a></h5> 
+<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4497550002'>Job Application for Junior Software Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -231,7 +231,7 @@
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California  Los Angeles</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://validity.applytojob.com/apply/AfLccHBOah/Software-Engineer'>Software Engineer - Validity - Career Page</a></h5> 
+<h5><a href='http://validity.applytojob.com/apply/AfLccHBOah/Software-Engineer'>Software Engineer - Validity - Career Page</a></h5> 
 <p><span class="badge badge-light">Broomfield, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -291,7 +291,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://olo.applytojob.com/apply/rkGJCwhYVp/Software-Engineer-BackEnd-Developer'>Software Engineer - Back-End Developer - Olo - Career Page</a></h5> 
+<h5><a href='http://olo.applytojob.com/apply/rkGJCwhYVp/Software-Engineer-BackEnd-Developer'>Software Engineer - Back-End Developer - Olo - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -351,7 +351,7 @@
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CERN/743999698313206-linux-kernel-software-developer-be-co-ht-2019-112-ld-'>CERN Linux Kernel Software Developer (BE-CO-HT-2019-112-LD) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CERN/743999698313206-linux-kernel-software-developer-be-co-ht-2019-112-ld-'>CERN Linux Kernel Software Developer (BE-CO-HT-2019-112-LD) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -367,7 +367,7 @@
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/impac-careers/job/ovFqbfwv'>Impac Mortgage Corp. Careers - Senior Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/impac-careers/job/ovFqbfwv'>Impac Mortgage Corp. Careers - Senior Software Developer</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -423,7 +423,7 @@
 <p><span class="badge badge-light">San Diego, California  Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://smartmicro.join.com/jobs/459242-software-engineer-m-f-d'>Job @ smartmicro (Brunswick): Software Engineer (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartmicro.join.com/jobs/459242-software-engineer-m-f-d'>Job @ smartmicro (Brunswick): Software Engineer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
