--- a/web-developer.html
+++ b/web-developer.html
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://applift.recruitee.com/o/php-web-developer-fmd-for-rechhero'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://applift.recruitee.com/o/php-web-developer-fmd-for-rechhero'>
       PHP Web Developer (f/m/d), for Rechhero - Applift
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324371/front-end-web-developer'>Front-end Web Developer | WorkNOLA</a></h5> 
+<h5><a href='https://worknola.com/job/324371/front-end-web-developer'>Front-end Web Developer | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -138,7 +138,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -176,7 +176,7 @@
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ALRiyad/743999698225244-web-developer'>ALRiyad Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ALRiyad/743999698225244-web-developer'>ALRiyad Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -190,7 +190,7 @@
 <p><span class="badge badge-light">Eden Prairie, Minnesota</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://westphalia-datalab.join.com/jobs/456444-web-developer-w-m-d'>Job @ Westphalia DataLab  (M?nster): Web Developer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/456444-web-developer-w-m-d'>Job @ Westphalia DataLab  (M?nster): Web Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -244,7 +244,7 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/vitamin-world-looking-for-senior-web-developer-remote-opportunity/'>Vitamin World looking for Senior Web Developer (Remote Opportunity!)</a></h5> 
+<h5><a href='https://dedeleads.com/job/vitamin-world-looking-for-senior-web-developer-remote-opportunity/'>Vitamin World looking for Senior Web Developer (Remote Opportunity!)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -329,7 +329,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.stoutsystems.com/job/2898-SM/'>Entry Level Web Developer (contract-to-hire)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.stoutsystems.com/job/2898-SM/'>Entry Level Web Developer (contract-to-hire)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -363,7 +363,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.proctors.co.uk/careers/angular-front-end-web-developer-0'>Angular Front-End Web Developer | Proctor + Stevenson</a></h5> 
+<h5><a href='https://www.proctors.co.uk/careers/angular-front-end-web-developer-0'>Angular Front-End Web Developer | Proctor + Stevenson</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -395,7 +395,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/silver-peak/job/o6w1afwx'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/silver-peak/job/o6w1afwx'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -413,7 +413,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697932865-praktikant-in-web-application-development'>Bosch Group Praktikant*in Web Application Development | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697932865-praktikant-in-web-application-development'>Bosch Group Praktikant*in Web Application Development | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
